<resources>
    <string name="app_name">my-phone-details</string>

    <string name="HARDWARE">Hardware</string>
    <string name="SOFTWARE">Software</string>
    <string name="NETWORK">Network</string>
    <string name="OTHERS">Others</string>
    <string name="HOME">Home</string>
    <string name="ABOUT">About</string>

    <string name="ABOUT_MAIN_TEXT">This series of applications first started off with a Windows CLI app which then turned into this app and a Windows desktop application and was created because I found it irritating that you had to pay for software in order to see for example battery temperature.<br />\n\nNow what I mean by "pay" is for example if you wanted to change the color of a widget which displayed information in a ugly neon-green color, you would have to pay $5 USD and that is $5 USD too much for me. I have also created this just for the fun of it and I hope you enjoy using this app more than I enjoyed building it!<br />\n\nP.S. My socials are below!<br />\n\n324Hz<br />\n\nwin21H2</string>
    <string name="WIDGET_MAIN_TEXT">This is a app in a series of apps that have been created to show device performance and statistics. Currently in the series, there is a Windows CLI version, Windows Application version, and an Android version although this app will expand to wearOS devices.</string>
    <string name="LINKEDIN">LinkedIn</string>
    <string name="GITHUB">GitHub</string>
    <string name="YOUTUBE">Youtube</string>
    <string name="TWITTER">Twitter</string>
    <string name="GDOTDEV">g.dev</string>
    <string name="STACKOF">Stack overflow</string>

    <string name="openOnGH">Open in GitHub</string>
    <string name="appInformation_maintext">Created by 324Hz/win21H2 under the GNU General Public License v3.0 | June 07<br />\n\nLast updated: 10/12/22 5:43pmUTC 12:43pmCDT</string>
    <string name="openApp">Open my-phone-details</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="app_widget_name">my-phone-details</string>
</resources>