<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aboutPage"
    android:background="@color/main_background">

    <ImageView
        android:id="@+id/centerimage"
        style="@style/center_image"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher_round"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ABOUT"
        android:layout_marginTop="5dp"
        android:textAllCaps="true"
        android:textColor="@color/main_font"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/ABOUT_MAIN_TEXT"
        android:textAllCaps="false"
        android:textColor="@color/main_font"
        android:textSize="17sp"

        app:layout_constraintBottom_toTopOf="@+id/centerimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/home"
        style="@style/socials_button"
        android:text="@string/HOME"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/centerimage" />

    <!--SOCIALS-->
    <Button
        android:id="@+id/LINKEDIN"
        android:text="@string/LINKEDIN"
        style="@style/socials_button"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home" />

    <Button
        android:id="@+id/GITHUB"
        android:text="@string/GITHUB"
        android:layout_marginEnd="8dp"
        style="@style/socials_button"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/LINKEDIN"
        app:layout_constraintTop_toBottomOf="@+id/home" />

    <Button
        android:id="@+id/YOUTUBE"
        android:text="@string/YOUTUBE"
        android:layout_marginStart="8dp"
        style="@style/socials_button"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LINKEDIN"
        app:layout_constraintTop_toBottomOf="@+id/home" />

    <Button
        android:id="@+id/TWITTER"
        android:text="@string/TWITTER"
        android:layout_marginTop="8dp"
        style="@style/socials_button"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LINKEDIN" />

    <Button
        android:id="@+id/STACKOF"
        android:text="@string/STACKOF"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        style="@style/socials_button"

        app:layout_constraintEnd_toStartOf="@+id/TWITTER"
        app:layout_constraintTop_toBottomOf="@+id/GITHUB" />

    <Button
        android:text="@string/GDOTDEV"
        android:id="@+id/GDOTDEV"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        style="@style/socials_button"

        app:layout_constraintStart_toEndOf="@+id/TWITTER"
        app:layout_constraintTop_toBottomOf="@+id/YOUTUBE" />

</androidx.constraintlayout.widget.ConstraintLayout>