<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".softwarePage"
    android:background="@color/main_background">

    <ImageView
        android:id="@+id/centerimage"
        style="@style/center_image"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher_round"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SOFTWARE"
        android:textColor="@color/main_font"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:layout_marginTop="5dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/home"
        style="@style/socials_button"
        android:text="@string/HOME"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/centerimage" />

</androidx.constraintlayout.widget.ConstraintLayout>