<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hardwarePage"
    android:background="@color/main_background">

    <ImageView
        android:id="@+id/centerimage"
        style="@style/center_image"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher_round"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hardware"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/HARDWARE"
        android:textAllCaps="true"
        android:textColor="@color/main_font"

        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        style="@style/socials_button"
        android:layout_width="325dp"

        android:layout_height="300dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/centerimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hardware">

        <TextView
            android:id="@+id/INFO"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:fontFamily="@font/inconsolata"
            android:scrollbars="vertical"
            android:text=""
            android:textAllCaps="false"
            android:textColor="@color/main_font"
            android:textColorHint="@color/main_font"
            android:textIsSelectable="true"
            android:textSize="15sp"
            android:layout_margin="10dp"

            app:layout_constraintBottom_toTopOf="@+id/centerimage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
    </ScrollView>

    <Button
        android:id="@+id/home"
        style="@style/socials_button"
        android:text="@string/HOME"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/centerimage" />

    <Button
        android:id="@+id/copydata"
        style="@style/socials_button"
        android:layout_marginTop="32dp"

        android:text="@string/COPYDATA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home" />
</androidx.constraintlayout.widget.ConstraintLayout>